kubernetes/namespaces/default/prestashop/ingress.yaml
apiVersion: v1
kind: Service
metadata:
  name: merch-svc
spec:
  selector:
    app.kubernetes.io/instance: prestashop-v2
    app.kubernetes.io/name: prestashop
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/auth-tls-verify-client: "on"
    nginx.ingress.kubernetes.io/auth-tls-secret: "kube-system/mtls-client-crt-bundle"
    nginx.ingress.kubernetes.io/auth-tls-error-page: "https://www.youtube.com/watch?v=dQw4w9WgXcQ"
  name: merch
spec:
  tls:
  - hosts:
      - "*.pythondiscord.com"
    secretName: pythondiscord.com-tls
  rules:
  - host: merch.pythondiscord.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: merch-svc
            port:
              number: 80
